<resources>
    <string name="app_name">Kouvee Pet Shop - Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_produk">Produk</string>
    <string name="title_layanan">Layanan</string>
    <string name="title_jenis_hewan">Jenis Hewan</string>
    <string name="title_ukuran_hewan">Ukuran Hewan</string>
    <string name="title_supplier">Supplier</string>
    <string name="title_peliharaan">Hewan Peliharaan</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_pengadaan">Pengadaan</string>
    <string name="title_pembayaran">Pembayaran</string>
    <string name="title_penjualan_layanan">Penjualan Layanan</string>
    <string name="title_penjualan_produk">Penjualan Produk</string>
    <string name="title_produk_menipis">Produk Menipis</string>

    <string name="title_hewan">Hewan</string>
    <string name="title_customer">Customer</string>
    <string name="title_harga_layanan">Harga Layanan</string>
    <string name="title_edited_by">Edited by</string>
    <string name="title_alamat">Alamat</string>
    <string name="title_nomor_telepon">Nomor Telepon</string>
    <string name="title_tanggal_lahir">Tanggal Lahir</string>
    <string name="title_alamat_customer">Alamat Customer</string>
    <string name="title_nama_customer">Nama Customer</string>
    <string name="nama_hewan">Nama Hewan</string>
    <string name="title_nama_hewan">Nama Hewan</string>
    <string name="title_nama_supplier">Nama Supplier</string>
    <string name="title_alamat_supplier">Alamat Supplier</string>
    <string name="title_harga_jual_produk">Harga Jual Produk</string>
    <string name="title_harga_beli_produk">Harga Beli Produk</string>
    <string name="title_harga_satuan_produk">Harga Satuan Produk</string>
    <string name="satuan">Satuan</string>
    <string name="stok">Stok</string>
    <string name="stok_minimum">Stok Minimum</string>
    <string name="under_construction">Under Construction</string>
    <string name="title_harga_beli">Harga Beli</string>
    <string name="title_harga_jual">Harga Jual</string>
    <string name="title_nama_produk">Nama Produk</string>
    <string name="title_click_image_to_upload"><![CDATA[<<Click Image to Upload>>]]></string>
    <string name="title_click_image_to_upload_2">- Click Image to Upload -</string>
    <string name="title_update">Update</string>
    <string name="title_save">Save</string>


</resources>
