<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_produk"
        android:icon="@drawable/ic_action_produk"
        android:title="@string/title_produk" />

    <item
        android:id="@+id/navigation_layanan"
        android:icon="@drawable/ic_action_layanan"
        android:title="@string/title_layanan" />

    <item
        android:id="@+id/navigation_peliharaan"
        android:icon="@drawable/ic_action_jenis_hewan"
        android:title="@string/title_peliharaan"/>

    <item
        android:id="@+id/navigation_customer"
        android:icon="@drawable/ic_person"
        android:title="@string/title_customer"/>

    <item
        android:id="@+id/navigation_transaksi_cs"
        android:icon="@drawable/ic_transaction"
        android:title="@string/title_transaksi"/>

</menu>
