<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_cs"
    app:startDestination="@+id/navigation_produk">

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.example.kouveepetshop.ui.produk.ProdukViewFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/fragment_produk_view" />

    <fragment
        android:id="@+id/navigation_penjualan_layanan"
        android:name="com.example.kouveepetshop.ui.transaksiCS.PenjualanLayananViewFragment"
        android:label="@string/title_penjualan_layanan" />

    <fragment
        android:id="@+id/navigation_customer"
        android:name="com.example.kouveepetshop.ui.customer.CustomerViewFragment"
        android:label="@string/title_customer"
        tools:layout="@layout/fragment_customer_view" />

    <fragment
        android:id="@+id/navigation_transaksi_cs"
        android:name="com.example.kouveepetshop.ui.transaksiCS.TransaksiCSFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_transaksi_cs" />
</navigation>