<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvProduk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/parentProduk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_produk"
            android:textSize="20sp"
            android:id="@+id/txtViewNamaProduk"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satuan"
            android:textSize="15sp"
            android:id="@+id/txtViewSatuanProduk"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_harga_jual_produk"
            android:textSize="15sp"
            android:id="@+id/txtViewHargaProdukJual"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_harga_beli_produk"
            android:textSize="15sp"
            android:id="@+id/txtViewHargaProdukBeli"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok"
            android:textSize="15sp"
            android:id="@+id/txtViewStok"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok_minimum"
            android:textSize="15sp"
            android:id="@+id/txtViewStokMinimum"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edited_by"
            android:textSize="15sp"
            android:id="@+id/txtViewEditedByProduk"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->