<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/image_supplier"
            android:src="@mipmap/ic_truck"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBtnSupplier"
            android:text="@string/title_supplier"
            android:layout_marginTop="10dp"
            android:layout_below="@id/image_supplier"
            android:layout_alignRight="@id/image_supplier"
            android:layout_alignLeft="@id/image_supplier"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            />

        <ImageButton
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:id="@+id/image_pengadaan"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_package_1"
            android:layout_below="@id/tvBtnSupplier"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pengadaan"
            android:layout_below="@+id/image_pengadaan"
            android:layout_alignRight="@+id/image_pengadaan"
            android:layout_alignLeft="@id/image_pengadaan"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvBtnPengadaan"
            android:layout_marginTop="10dp"
            />

        <ImageButton
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:id="@+id/image_produk_menipis"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_out_of_stock_foreground"
            android:layout_below="@id/tvBtnPengadaan"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_produk_menipis"
            android:layout_below="@+id/image_produk_menipis"
            android:layout_alignRight="@+id/image_pengadaan"
            android:layout_alignLeft="@id/image_pengadaan"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvBtnProdukMenipis"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>

</RelativeLayout>