<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/produkImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/etNamaProduk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="Nama Produk"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_below="@+id/produkImage"/>

    <EditText
        android:id="@+id/etSatuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/satuan"
        android:layout_below="@+id/etNamaProduk"/>

    <EditText
        android:id="@+id/etHargaJual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Harga Jual"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/etSatuan"/>

    <EditText
        android:id="@+id/etHargaBeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Harga Beli"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/etHargaJual"/>

    <EditText
        android:id="@+id/etStok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stok"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/etHargaBeli"/>

    <EditText
        android:id="@+id/etStokMinimum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stok_minimum"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/etStok"/>

    <Button
        android:id="@+id/btnSaveProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:text="Save"
        android:layout_below="@id/etStokMinimum"/>
</RelativeLayout>